--- a/.gitignore
+++ b/.gitignore
@@ -37,10 +37,9 @@ dist/
 
 # Environment variables
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.development
+.env.staging
+.env.production
 
 # Python
 __pycache__/
