--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.0",
+    "date-fns": "^4.1.0",
     "expo": "~49.0.15",
     "expo-av": "~13.4.1",
     "expo-linear-gradient": "~12.3.0",
